2014-01-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* knj.c: Keep non-utf8 command line.  Avoid compiler warnings.

2014-01-01  TANAKA Takuji <KXD02663@nifty.ne.jp>

	* knj.c, knj.h: Use cast for ASCII string conversion
	from char to wchar_t. (Windows only)

2013-12-31  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* knj.h: Remove #include <kpathsea/types.h> because Visual Studio 2010
	cannot compile Kpathsea.

2013-12-31  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.c, knj.h: Add new functions fsyscp_fopen() and
	get_command_line_args_utf8() (Windows only)
	* progname.c: Refine initialization for KANJI (Windows only)

2013-12-03  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* elt-dirs.c, knj.c, knj.h, progname.c, readable.c: Support KANJI
	file name in (e)upTeX and XeTeX on Windows.

2013-09-22  Karl Berry  <karl@tug.org>

	* mktexlsr: output normal msgs to stdout, not stderr.
	Suggestion from Scott Kostyshak, tex-live mail 29 Jun 2013 04:42:10.

2013-08-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac (AH_TOP): Simplify the generation of c-auto.h.

2013-08-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c, mingw32.c (texlive_gs_init()): Fix a bug. 'n' and 'f' can
	be drive letters.

2013-08-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c, mingw32.c (texlive_gs_init()): Do nothing if
	TEXLIVE_WINDOWS_EXTERNAL_GS is defined and its value is not
	'0', 'n', or 'f'.

2013-08-07  Karl Berry  <karl@tug.org>

	* line.c (read_line): only at EOF if loc==0, i.e., do not ignore a
	non-terminated last "line" of a file; distressingly common on Windows.
	* Makefile.am (TESTS): add cnfnewline.test;
	move all *.test to tests/ subdir.
	(EXTRA_DIST): add tests/cnfnewline/texmf.cnf, a file without a
	final newline.

	* kpsewhich.test: also check that we can read the environment
	variable that we set.

2013-07-07  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.c and progname.c: Generalize the method to avoid the 0x5c problem