@@ -1,3 +1,8 @@
+2014-01-08  TANAKA Takuji <KXD02663@nifty.ne.jp>
+
+	* knj.c: Allow encoding name "" for non-utf8 command line.
+	Warn if unknown encoding. (Windows only)
+
 2014-01-04  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* knj.c: Keep non-utf8 command line.  Avoid compiler warnings.
